Added timeout and kick commands. Updated usage text. Added jar file reading support.