@@ -11,13 +11,21 @@ import org.jetbrains.annotations.NotNull;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 
 public class BotLauncher extends ListenerAdapter {
     static JDA bot;
     public static void main(String[] args) throws Exception{
-        String token = Files.readString(Path.of("src/main/resources/bot_token.txt")).trim();
+        Path jarDir = Paths.get(
+                BotLauncher.class.getProtectionDomain()
+                        .getCodeSource()
+                        .getLocation()
+                        .toURI()
+        ).getParent();
+        String token = Files.readString(jarDir.resolve("bot_token.txt")).trim();
+        //String token = Files.readString(Path.of("bot_token.txt")).trim();
         bot = JDABuilder.createDefault(token).addEventListeners(new EventListener()).enableIntents(GatewayIntent.MESSAGE_CONTENT).build().awaitReady();
     }
 
